--- a/package.json
+++ b/package.json
@@ -12,10 +12,43 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "views": {
+			"explorer": [
+				{
+					"type": "webview",
+					"id": "calicoColors.colorsView",
+					"name": "Calico Colors"
+				}
+			]
+		},
+    "menus": {
+			"view/title": [
+				{
+					"command": "calicoColors.clearColors",
+					"group": "navigation",
+					"when": "view == calicoColors.colorsView"
+				}
+			]
+		},
     "commands": [
       {
         "command": "issue-reporter-ts.createIssue",
         "title": "Issue Reporter: Create Issue"
+      },
+      {
+        "command": "issue-reporter-ts.setup",
+        "title": "Issue Reporter: Setup Webhook"
+      },
+      {
+        "command": "calicoColors.addColor",
+        "category": "Calico Colors",
+        "title": "Add Color"
+      },
+      {
+        "command": "calicoColors.clearColors",
+        "category": "Calico Colors",
+        "title": "Clear Colors",
+        "icon": "$(clear-all)"
       }
     ],
     "configuration": {
